# AnTrans-RI

./: CMakeLists.txt  README.md  result.txt
include/: deduce.hpp  opts.hpp  search.h  search.hpp  search_backtrace.hpp  search_common.hpp  search_once.hpp  string_funcs.hpp  tools.hpp
tests/: test_deduce.cpp  test_opts.cpp  test_search.cpp
